kustomize/ingress/whoami.enc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        nginx.ingress.kubernetes.io/limit-connections: "5"
        nginx.ingress.kubernetes.io/limit-rps: "5"
        nginx.ingress.kubernetes.io/limit-whitelist: 192.168.0.0/16
        nginx.ingress.kubernetes.io/proxy-body-size: "0"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
        # This is somewhat of a sentinal ingress to generate TLS certs from cert-manager. Other ingress records will use that cert as its a wildcard one
        cert-manager.io/cluster-issuer: letsencrypt-prod
        cert-manager.io/private-key-algorithm: ECDSA
    labels:
        app: whoami
        use-cloudflare-solver: "false"
    name: whoami
    namespace: default
spec:
    ingressClassName: nginx
    rules:
        - host: ENC[AES256_GCM,data:tEHoYBt8lt2QAgJrEdwQ,iv:lOv+SUPGATZW3kOPEQLiROlUGEJ798Im+joOGtScBLM=,tag:PlvLWDN3bQ1Rpm1yP4H+Ng==,type:str]
          http:
            paths:
                - backend:
                    service:
                        name: whoami
                        port:
                            name: http
                  path: /
                  pathType: ImplementationSpecific
    tls:
        - hosts:
            - ENC[AES256_GCM,data:99G5qc1Vz4Q=,iv:obs5y1rUEQD48R5n5XNJyjZDHTMWKfcz9/nR58ldPzA=,tag:kH+KQ+rEyCCYpygypm/FpA==,type:str]
            - ENC[AES256_GCM,data:xzSYVtvQfhtP6g==,iv:5MC+Wn3L9G7jSqSlDuQU5BDGsQZ0w4xNzLeh1X5bwmc=,tag:QR3JdHdjC86w+ANpD9m8cg==,type:str]
          secretName: prod-cert
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age17pzq63nanwarvma9nc7dvp7yy3dalgcr8e958dxrx9nfkkcwuyksw8qsds
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjdkYwcXpHZjk3cktXYkth
[...]
            9bw2hcRVyZeIVKLxdId0uT/uGsfovOs9tL04D2CGNtOQdjoolmsJ8Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2022-12-04T00:31:25Z"
    mac: ENC[AES256_GCM,data:ts42BAFaH6WxCgAYGcaUgl9hYrUvGWj02uttBYgRDsH4xEQlKsXlczMXGQy1YSO94ifzCe2Fo0DY5lC2bMLyhO10AYDg4o1Jzuj52dD95IflQ3c381TnGxjcLsYq/WycAed88z9tzw3Wa4jC8h8rn25ZoYY8fAL39/olY9l/i20=,iv:dM8aXOWjpTxIJrxVvflJcIbFBsCuy6w6C/Q5V7FGJBc=,tag:6o++Vx4BmxKbdvH1cR3WMQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|host|hosts)$
    version: 3.7.3
